[gd_scene load_steps=18 format=3 uid="uid://bjmsqj0xkjmlr"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_kd0sr"]
[ext_resource type="Script" path="res://scripts/ingredient_manager.gd" id="1_sy0kq"]
[ext_resource type="PackedScene" uid="uid://cv66ab71crrxd" path="res://scenes/overlay.tscn" id="2_ptpf1"]
[ext_resource type="PackedScene" uid="uid://c4vccsaskxygi" path="res://scenes/ing1.tscn" id="3_ahxml"]
[ext_resource type="PackedScene" uid="uid://0d0dwfveupt1" path="res://scenes/beach-ld.tscn" id="5_8bxnv"]
[ext_resource type="PackedScene" uid="uid://btljl67540cjj" path="res://scenes/ing2.tscn" id="6_ja8px"]
[ext_resource type="PackedScene" uid="uid://dlqw8nxlq3gwy" path="res://scenes/ing3.tscn" id="7_0bpqi"]
[ext_resource type="PackedScene" uid="uid://basux2eokdr82" path="res://scenes/p3_duck.tscn" id="7_oifxl"]
[ext_resource type="PackedScene" uid="uid://cewaah215cyps" path="res://scenes/cauldron.tscn" id="7_rubto"]
[ext_resource type="Texture2D" uid="uid://bkputnynd6c62" path="res://assets/Ocean/Ocean_2/5.png" id="8_1sk5l"]
[ext_resource type="PackedScene" uid="uid://cuvibxi7nrl5g" path="res://scenes/p4_duck.tscn" id="8_bkma5"]
[ext_resource type="Shader" path="res://shaders/water.gdshader" id="9_bhve8"]
[ext_resource type="Texture2D" uid="uid://c2kou1pukxyi1" path="res://icon.svg" id="10_o8dyn"]
[ext_resource type="AudioStream" uid="uid://7we2ma1yd81n" path="res://assets/music/lv1_beach.ogg" id="12_uje8k"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_457nn"]
noise_type = 2
frequency = 0.013
fractal_type = 2
fractal_gain = 0.98
fractal_weighted_strength = 0.75

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_putd4"]
width = 128
height = 128
seamless = true
seamless_blend_skirt = 0.6
noise = SubResource("FastNoiseLite_457nn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xah76"]
shader = ExtResource("9_bhve8")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/speed = Vector2(0.02, 0.05)
shader_parameter/wave_strength = 2.0
shader_parameter/fade_start = 0.2
shader_parameter/fade_end = 0.8
shader_parameter/fast_noise = SubResource("NoiseTexture2D_putd4")

[node name="level_1" type="Node"]
script = ExtResource("1_kd0sr")

[node name="OverlayScene" parent="." instance=ExtResource("2_ptpf1")]

[node name="Cauldron" parent="." instance=ExtResource("7_rubto")]
z_index = 1
position = Vector2(115, 439)
scale = Vector2(0.6, 0.6)

[node name="IngredientManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_sy0kq")

[node name="IngCounter" type="Label" parent="IngredientManager"]
offset_left = -82.0
offset_top = 378.0
offset_right = 211.0
offset_bottom = 408.0
text = "Level 1"

[node name="Ingredients" type="Node" parent="."]

[node name="ing1" parent="Ingredients" instance=ExtResource("3_ahxml")]
position = Vector2(368, 462)

[node name="ing2" parent="Ingredients" instance=ExtResource("6_ja8px")]
position = Vector2(631, 476)

[node name="ing3" parent="Ingredients" instance=ExtResource("7_0bpqi")]
position = Vector2(-273, 364)

[node name="Node2D" parent="." instance=ExtResource("5_8bxnv")]
position = Vector2(0, 409)

[node name="SpawnPoint1" type="Marker2D" parent="."]
position = Vector2(-53, 443)

[node name="SpawnPoint2" type="Marker2D" parent="."]
position = Vector2(177, 436)

[node name="Background" type="Sprite2D" parent="."]
z_index = -9
position = Vector2(-672, -59)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_1sk5l")

[node name="p3_duck" parent="." instance=ExtResource("7_oifxl")]
position = Vector2(634, 608)

[node name="p4_duck" parent="." instance=ExtResource("8_bkma5")]
position = Vector2(974, 608)

[node name="p4_duck2" parent="." instance=ExtResource("8_bkma5")]
position = Vector2(1083, 608)

[node name="p3_duck2" parent="." instance=ExtResource("7_oifxl")]
position = Vector2(-1318, 290)

[node name="Icon" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_xah76")
position = Vector2(-106.5, 1318)
scale = Vector2(48.3984, 7.78125)
texture = ExtResource("10_o8dyn")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Icon"]
position = Vector2(-0.371918, 1.28514)
scale = Vector2(6.4124, 6.66988)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_uje8k")
volume_db = -6.0
autoplay = true
